--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,9 +1,6 @@
-body
-    background: linear-gradient(0.01deg, #000000 0.01%, rgba(0, 0, 0, 0) 95.44%), #20202D
-
-.container
-    max-width: 945px
-    margin: auto
 
 @import 'blocks/header'
 @import 'blocks/main'
+@import 'settings'
+@import 'blocks/_features'
+@import 'blocks/_projects'
