--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -11,21 +11,52 @@
                 font-style: normal
                 font-weight: bold
                 font-size: 18px
+                padding-top: 40px
                 line-height: 28px
+                margin: auto
 
                 text-align: center
                 max-width: 285px
                 color: #000000
+                margin-bottom: 30px
 
 .footer
     &__form
-
+        padding-bottom: 48px
         &-pic
             background: transparent
             position: absolute
             margin-left: 20px
             margin-right: 12px
             margin-top: 18px
+        &-pic-2
+            background: transparent
+            position: absolute
+            margin-left: 20px
+            margin-right: 12px
+            margin-top: 38px
+
+    &__button
+
+        background: linear-gradient(180deg, #FDDE76 0%, #FFBB01 100%)
+        box-shadow: 0px 4px 0px #B68500
+        border-radius: 5px 5px 10px 10px
+        padding: 23px 70px
+        margin-top: 26px
+
+        margin-left: auto
+        font-family: Roboto
+        font-style: normal
+        font-weight: bold
+        font-size: 12px
+        line-height: 28px
+        border: none
+        display: flex
+        align-items: center
+        text-align: center
+        text-transform: uppercase
+
+        color: #2E2E30
 
     &__input
         background: #F8F8F8
@@ -35,6 +66,7 @@
         border: none
         padding-top: 18px
         padding-bottom: 18px
+        margin: auto
         padding-left: 50px
         padding-right: 20px
         &::placeholder
@@ -48,3 +80,39 @@
             align-items: center
 
             color: #949494
+        &-fild
+            margin: auto
+            max-width: 264px
+
+    &-item
+        max-width: 264px
+        margin: auto
+
+.message
+    resize: none
+    background: #F8F8F8
+    box-shadow: inset 0px 3px 10px rgba(199, 199, 199, 0.25)
+    border-radius: 5px
+    outline: none
+    width: 264px
+    border: none
+    padding-top: 18px
+    padding-bottom: 18px
+    padding-left: 25px
+    padding-right: 20px
+    &::placeholder
+        font-family: Roboto
+        font-style: normal
+        font-weight: normal
+        font-size: 14px
+        line-height: 28px
+
+        display: flex
+        align-items: center
+
+.phone
+    margin-top: 17px
+    margin-bottom: 17px
+.textarea
+    margin: auto
+    max-width: 264px
