--- a/sass/blocks/_projects.sass
+++ b/sass/blocks/_projects.sass
@@ -64,6 +64,8 @@
                         font-size: 16px
                         line-height: 19px
                         color: #FFFFFF
+                        &:hover
+                            color: #A5A5A5
                     &-pic
 
                     &-title
