--- a/sass/blocks/_main.sass
+++ b/sass/blocks/_main.sass
@@ -64,3 +64,16 @@
             width: 380px
             height: 380px
             object-fit: cover
+.button-link
+    font-family: Roboto
+    font-style: normal
+    font-weight: bold
+    font-size: 12px
+    line-height: 14px
+    display: flex
+    align-items: center
+    text-align: center
+    text-transform: uppercase
+
+    color: #2E2E30
+    text-decoration: none
